--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -45,35 +45,6 @@
     display: table-row-group;
 }
 
-.ClientId {
-    width: 500px;
-}
-
-.ClientName {
-    width: 700px;
-}
-
-.client-details-link {
-    text-decoration: none;
-    color: #4cc3d9 !important;
-}
-
-.client-details-link:hover {
-    text-decoration: underline !important;
-    color: #4cc3d9 !important;
-}
-
-.client-update-link {
-    background-color: red;
-    width: 100%;
-    height: 100%;
-    display: block;
-}
-
-.client-deleted {
-    text-decoration: line-through !important;
-}
-
 .table-responsive-custom {
     width: 100%;
     margin-bottom: 15px;
@@ -95,4 +66,11 @@
 .table-responsive-custom>.table>tbody>tr>td,
 .table-responsive-custom>.table>tfoot>tr>td {
     white-space: nowrap;
+}
+
+div .list-vocal {
+    background-color: lightgrey;
+    width: 300px;
+    border: 25px solid green;
+    padding: 25px;
 }
