--- a/vocal/templates/vocal/create_vocal.html
+++ b/vocal/templates/vocal/create_vocal.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+{% load static %}
+
+{% block content %}
 <div class="panel mb25">
     <div class="panel-heading border">
         <h3>Add New Vocal</h3>
@@ -19,15 +23,51 @@
                         <div class="col-sm-8">
                             <input type="text" class="form-control input-rounded" name="vocal_name_input"
                                    id="vocal_name_input"
-                                   value="{{ vocal_info.name | default_if_none:'' }}" required>
+                                   value="{{ vocal_info.vocal_name | default_if_none:'' }}" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Description</label>
+                        <label class="col-sm-2 control-label">E Description</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control input-rounded" name="vocal_e_description_input"
                                    id="vocal_e_description_input"
-                                   value="{{ vocal_info.description | default_if_none:'' }}">
+                                   value="{{ vocal_info.e_description | default_if_none:'' }}">
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">V Description</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control input-rounded" name="v_description_input"
+                                   id="v_description_input"
+                                   value="{{ vocal_info.v_description | default_if_none:'' }}">
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Pronunciation</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control input-rounded" name="pronunciation_input"
+                                   id="pronunciation_input"
+                                   value="{{ vocal_info.pronunciation | default_if_none:'' }}">
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Image url</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control input-rounded" name="image_url_input"
+                                   id="image_url_input"
+                                   value="{{ vocal_info.image_url | default_if_none:'' }}">
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Sound url</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control input-rounded" name="sound_url_input"
+                                   id="sound_url_input"
+                                   value="{{ vocal_info.sound_url | default_if_none:'' }}">
 
                         </div>
                     </div>
@@ -48,3 +88,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
