--- a/vocal/templates/vocal/list_vocal.html
+++ b/vocal/templates/vocal/list_vocal.html
@@ -1,35 +1,27 @@
+{% extends "base.html" %}
+{% load static %}
+
+{% block content %}
 <div class="panel-heading border">
     <h3>Vocal List</h3>
 </div>
 
 <div class="panel-body">
     <div class="pull-right mb15">
-        <a href="#">
+        <a href="{% url 'vocal:create_vocal' %}">
             <input id="api-btn-create" class="btn btn-success btn-block" type="button"
                    value="Add"/>
         </a>
     </div>
     <div class="table-responsive">
-        <table class="table table-bordered table-striped mb0">
-            <thead>
-            <tr>
-                <th class="col-sm-1" id="vocal id">ID</th>
-                <th class="col-sm-2" id="vocal name">Name</th>
-                <th class="col-sm-1" id="english description">Http Method</th>
-                <th class="col-sm-2" id="viet description">Pattern</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for vocal in data %}
-            <tr>
-                <td class="col-sm-1">{{ vocal.vocalId|default_if_none:'' }}</td>
-                <td class="col-sm-2">{{ vocal.vocalName|default_if_none:'' }}</td>
-                <td class="col-sm-1">{{ vocal.eDescription|default_if_none:'' }}</td>
-                <td class="col-sm-2">{{ vocal.vDescription|default_if_none:'' }}</td>
-            </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        {% for vocal in data %}
+            <a id="{{ vocal.vocal_id }}" href="{% url 'vocal:vocal_detail' vocal.vocal_id %}">
+                <div class="list-vocal">
+                    {{ vocal.vocal_name|default_if_none:'' }}
+                </div>
+            </a>
+        {% endfor %}
     </div>
 </div>
+{% endblock %}
 
