--- a/vocal/templates/vocal/create_vocal.html
+++ b/vocal/templates/vocal/create_vocal.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="pull-right">
-                        <a href="{% url 'vocal:vocal_list' %}">
+                        <a href="{% url 'vocal:vocal_list_admin' %}">
                             <input id="vocal_btn_cancel" class="btn text-left mb15" type="button"
                                    value="Cancel"/>
                         </a>
